// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`health schema (0) match fails for invalid config -> empty: empty 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'Health'[39m
[31m    Path:     health.schema.json#/required[39m
[31m[39m"
`;

exports[`health schema (1) match fails for invalid config -> health is missing: health is missing 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must have required property 'Health'[39m
[31m    Path:     health.schema.json#/required[39m
[31m[39m[31m  must NOT have additional properties, but found 'HealthScore'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`health schema (2) match fails for invalid config -> health is not within enum: health is not within enum 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have additional properties, but found 'Health'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'HealthScore'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`health schema (3) match fails for invalid config -> health score is larger 100: health score is larger 100 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have additional properties, but found 'Health'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'HealthScore'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`health schema (4) match fails for invalid config -> health score is negative: health score is negative 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have additional properties, but found 'Health'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'HealthScore'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m"
`;

exports[`health schema (5) match fails for invalid config -> swapped key and value: swapped key and value 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchSchema([22m[32mschema[39m[2m)[22m

received
[31m  must NOT have additional properties, but found 'Health'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m[31m  must NOT have additional properties, but found 'HealthScore'[39m
[31m    Expected: [33m<boolean>[39m[31m false[39m
[31m    Path:     health.schema.json#/additionalProperties[39m
[31m[39m"
`;
